[package]
name = "uckb-spec"
version = "0.1.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"

[dependencies]
ckb-types = "0.37.0"
tentacle = { version = "0.3.3", features = ["molc"] }
property = "0.3.3"
thiserror = "1.0.22"
lazy_static = "1.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"

[build-dependencies]
ckb-types = "0.37.0"
ckb-resource = "0.37.0"
ckb-chain-spec = "0.37.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"

[badges]
travis-ci = { repository = "unofficial-ckb/uckb-spec" }
