[package]
name = "uckb-spec"
version = "0.1.1"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2018"
description = "[Unofficial] CKB chain specification."
homepage = "https://github.com/unofficial-ckb/uckb-spec"
repository = "https://github.com/unofficial-ckb/uckb-spec"
keywords = []
categories = []
license = "Apache-2.0 OR MIT"
include = ["src/**/*", "LICENSE-*", "README.md", "build.rs"]

[dependencies]
ckb-types = "0.38.0"
tentacle = { version = "0.3.3", features = ["molc"] }
property = "0.3.3"
thiserror = "1.0.22"
lazy_static = "1.4.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"

[build-dependencies]
ckb-types = "0.38.0"
ckb-resource = "0.38.0"
ckb-chain-spec = "0.38.0"
serde = "1.0.117"
serde_derive = "1.0.117"
toml = "0.5.7"

[badges]
travis-ci = { repository = "unofficial-ckb/uckb-spec" }
